--- a/action.yml
+++ b/action.yml
@@ -4,8 +4,11 @@ inputs:
     repo-token:
         description: 'The GITHUB_TOKEN needed to update the issue'
         default: ${{ github.token }}
-    targetTeam:
-        description: 'The name of the team to which the target assignees belong'
+    targetTeamA:
+        description: 'The name of the team a to which the target assignees belong'
+        required: true
+    targetTeamB:
+        description: 'The name of the team b to which the target assignees belong'
         required: true
     excludeAssignees:
         description: 'Users to be excluded from being assigned as reviewers (comma-separated)'
